--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -9,9 +9,9 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"/>
 
-    <script th:src="@{/js/jquery-1.7.2.js}"></script>
+<!--    <script th:src="@{/js/jquery-1.7.2.js}"></script>-->
 
-    <script th:src="@{/js/pwstrength.js}"></script>
+<!--    <script th:src="@{/js/pwstrength.js}"></script>-->
 
     <title>$Title$</title>
 </head>
@@ -52,10 +52,10 @@
         </ul>
     </nav>
 
-<!--        <script th:src="@{/js/jquery.min.js}"></script>-->
-        <script th:src="@{/js/popper.min.js}"></script>
-        <script th:src="@{/css/bootstrap-4.5.0-dist/js/bootstrap.bundle.js}"></script>
-        <script th:src="@{/js/jquery-1.7.2.js}"></script>
+    <script th:src="@{/js/jquery.min.js}"></script>
+    <script th:src="@{/js/popper.min.js}"></script>
+    <script th:src="@{/css/bootstrap-4.5.0-dist/js/bootstrap.bundle.js}"></script>
+    <!--        <script th:src="@{/js/jquery-1.7.2.js}"></script>-->
         <script th:src="@{/js/pwstrength.js}"></script>
 
 
